{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 14,
  "lineage": "6dad1694-593a-19ab-25d4-6f0db0fd6b21",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "minhanic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkInterfaces/unyleya-nic",
            "internal_domain_name_suffix": "poozsqonieyejg2pnvmltyreeh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/virtualNetworks/unyleya-network/subnets/unyleya-subnet"
              }
            ],
            "location": "eastus",
            "name": "unyleya-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Unyleya-RG"
          },
          "dependencies": [
            "azurerm_virtual_network.minhavnet",
            "azurerm_resource_group.unyleya",
            "azurerm_subnet.minhasubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "minhanic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkInterfaces/unyleya-nic|/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkSecurityGroups/unyleya-nsg",
            "network_interface_id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkInterfaces/unyleya-nic",
            "network_security_group_id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkSecurityGroups/unyleya-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.minhanic",
            "azurerm_network_security_group.unyleya_nsg",
            "azurerm_resource_group.unyleya",
            "azurerm_subnet.minhasubnet",
            "azurerm_virtual_network.minhavnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "unyleya_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkSecurityGroups/unyleya-nsg",
            "location": "eastus",
            "name": "unyleya-nsg",
            "resource_group_name": "Unyleya-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "unyleya-allow-3389-inbound",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5986",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "unyleya-allow-5986-inbound",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.unyleya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "unyleya_nsg_rule_3389",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkSecurityGroups/unyleya-nsg/securityRules/unyleya-allow-3389-inbound",
            "name": "unyleya-allow-3389-inbound",
            "network_security_group_name": "unyleya-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "Unyleya-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.unyleya_nsg",
            "azurerm_resource_group.unyleya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "unyleya_nsg_rule_5986",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5986",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/networkSecurityGroups/unyleya-nsg/securityRules/unyleya-allow-5986-inbound",
            "name": "unyleya-allow-5986-inbound",
            "network_security_group_name": "unyleya-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Unyleya-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.unyleya_nsg",
            "azurerm_resource_group.unyleya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "minhasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/virtualNetworks/unyleya-network/subnets/unyleya-subnet",
            "name": "unyleya-subnet",
            "resource_group_name": "Unyleya-RG",
            "virtual_network_name": "unyleya-network"
          },
          "dependencies": [
            "azurerm_resource_group.unyleya",
            "azurerm_virtual_network.minhavnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "minhavnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "41999d7b-41cd-4430-9b8f-6d58b9e22427",
            "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/virtualNetworks/unyleya-network",
            "location": "eastus",
            "name": "unyleya-network",
            "resource_group_name": "Unyleya-RG",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9e780195-4e60-4f11-b9e2-4e2a88e6f10a/resourceGroups/Unyleya-RG/providers/Microsoft.Network/virtualNetworks/unyleya-network/subnets/unyleya-subnet",
                "name": "unyleya-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.unyleya"
          ]
        }
      ]
    }
  ]
}